--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
   transform: translateY(-50%);
   width: 100%;
   height: auto;
+  padding:2% 0;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 999;
   overflow: auto;
